--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "milligram": "^1.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-icon-base": "^2.0.4",
     "react-timeago": "^3.1.3"
   },
   "scripts": {
