--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "gsheets": "^2.0.0",
     "milligram": "^1.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-icon-base": "^2.0.4",
-    "react-timeago": "^3.1.3"
+    "react-icons": "^2.2.3",
+    "react-timeago": "^3.1.3",
+    "recompose": "^0.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
