--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.9.0"
+    "react-scripts": "^0.9.5"
   },
   "dependencies": {
     "gsheets": "^2.0.0",
-    "milligram": "^1.3.0",
+    "milligram": "^1.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-icon-base": "^2.0.4",
     "react-icons": "^2.2.3",
     "react-timeago": "^3.1.3",
-    "recompose": "^0.22.0"
+    "recompose": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "surge --project ./build --domain tutorium-helper.surge.sh"
   }
 }
