Use seperate prop-types pagage instead.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "gsheets": "^2.0.0",
     "milligram": "^1.1.0",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-icon-base": "^2.0.4",
