--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^0.9.5"
+    "react-scripts": "^0.9.5",
+    "surge": "^0.19.0"
   },
   "dependencies": {
     "gsheets": "^2.0.0",
