--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "premove": "npm run build",
-    "move": "mv ./build/index.hmtl ./build/200.html",
+    "move": "mv ./build/index.html ./build/200.html",
     "predeploy": "npm run move",
     "deploy": "surge --project ./build --domain tutorium-helper.surge.sh"
   }
